--- a/doc/cl_ext_dot_print.asciidoc
+++ b/doc/cl_ext_dot_print.asciidoc
@@ -24,7 +24,7 @@ Unratified proposal, still in beta so breaking changes are possible.
 == Version
 
 Built On: {docdate} +
-Version: 0.1.0
+Version: 0.2.0
 
 == Dependencies
 
@@ -40,6 +40,7 @@ This extension requires OpenCL 1.0.
 [source,c]
 ----
 cl_dot_graph_ext clCreateDotGraphEXT(cl_uint num_queues, const cl_command_queue* queues,
+                                     const cl_dot_graph_properties_ext* properties,
                                      const char* file_path, cl_int* errorcode_ret);
 
 cl_int clRetainDotGraphEXT(cl_dot_graph_ext dot);
@@ -51,7 +52,17 @@ cl_int clReleaseDotGraphEXT(cl_dot_graph_ext dot);
 
 [source,c]
 ----
+typedef cl_bitfield         cl_dot_graph_flags_ext;
+typedef cl_properties       cl_dot_graph_properties_ext;
 typedef struct _cl_dot_graph_ext*  cl_dot_graph_ext;
+----
+
+== New Enums
+
+[source, c]
+----
+#define CL_DOT_GRAPH_COLOR_EXT (1 << 0)
+#define CL_DOT_GRAPH_VERBOSE_EXT (1 << 1)
 ----
 
 == Modifications to the OpenCL API Specification
@@ -72,6 +83,7 @@ To create a dot graph object, use the function
 cl_dot_graph_ext clCreateDotGraphEXT(
    cl_uint num_queues,
    const cl_command_queue* queues,
+   const cl_dot_graph_properties_ext* properties,
    const char* file_path,
    cl_int* errorcode_ret);
 ----
@@ -82,6 +94,14 @@ _queues_ is a pointer to a list of command-queues that a dot graph of commands
 will be created from. _queues_ must be a non-NULL value and the length of the
 list equal to _num_queues_.
 
+_properties_ specifies a list of properties for the dot graph object and their
+corresponding values. Each property name is immediately followed by the corresponding
+desired value. The list is terminated with 0. If a supported property and its value is
+not specified in _properties_, its default value will be used. _properties_ may be NULL,
+in which case the default values for supported properties will be used. Supported
+properties defined by extensions are defined in the <<dot-graph-properties-table,
+List of supported properties by clCreateDotGraphExt>> table.
+
 _file_path_ filesystem path to where dot file of commands will be created. If
 _file_path_ is `NULL`, then a file named `clviz_YYYY-MM-DD_HH:MM:SS.dot` in the
 current working directory will be created. If _file_path_ is an existing file,
@@ -89,6 +109,23 @@ then that file will be overwritten.
 
 _errorcode_ret_ will return an appropriate error code. If _errcode_ret_ is `NULL`,
 no error code is returned.
+
+[[dot-graph-properties-table]]
+.List of supported properties by *clCreateDotGraphEXT*
+[cols="3,2,10",options="header",]
+|====
+| Property | Property Value | Description
+
+| `CL_DOT_GRAPH_FLAGS_EXT`
+| `cl_dot_graph_flags_ext`
+| This is a bitfield and can be set to a combination of the following values
+  and defaults to zero:
+
+  * `CL_DOT_GRAPH_COLOR_EXT` - Use color in dot file to distinguish queues.
+
+  * `CL_DOT_GRAPH_VERBOSE_EXT` - Enable verbose output in dot file.
+
+|====
 
 *clCreateDotGraphEXT* returns a valid non-zero dot graph object and _errcode_ret_
 is set to `CL_SUCCESS` if the object is created successfully. Otherwise, it
@@ -99,6 +136,7 @@ _errcode_ret_:
    command-queue.
 * `CL_INVALID_CONTEXT` if all the command-queues in queues do not have the
    same OpenCL context.
+* `CL_INVALID_VALUE` if values specified in properties are not valid.
 * `CL_INVALID_VALUE` if queues is `NULL`.
 * `CL_OUT_OF_RESOURCES` if there is a failure to allocate resources required by
    the OpenCL implementation on the device.
@@ -155,4 +193,5 @@ successfully. Otherwise, it returns one of the following errors:
 |====
 | Version | Date       | Author        | Changes
 | 0.1.0   | 2025-07-17 | Ewan Crawford | *Initial revision*
+| 0.2.0   | 2025-11-14 | Ewan Crawford | *Add verbose and color flags*
 |====
